...
                                            <constraint firstAttribute="height" constant="50" id="5xu-oK-kNu"/>
                                        </constraints>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qFk-o8-LfT">
                                        <rect key="frame" x="0.0" y="70" width="334" height="50"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6b1-63-xGx">
                                        <rect key="frame" x="0.0" y="140" width="334" height="50"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ke2-45-Wr2">
...
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NtB-5S-CLt">
                                        <rect key="frame" x="0.0" y="140" width="334" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="uhE-DT-1O2"/>
                                        </constraints>
                                        <state key="normal" title="LOG IN"/>
                                        <connections>
                                            <action selector="logInTapped:" destination="1Wc-zm-2CV" eventType="touchUpInside" id="81f-Qz-7Hw"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uob-WM-PvQ">
                                        <rect key="frame" x="0.0" y="210" width="334" height="50"/>
...
                            <constraint firstItem="NjG-i1-kFX" firstAttribute="trailing" secondItem="K7G-Al-VEr" secondAttribute="trailing" constant="10" id="pdG-Li-ar4"/>
                            <constraint firstItem="YFK-2S-uaD" firstAttribute="leading" secondItem="NjG-i1-kFX" secondAttribute="leading" constant="59" id="tKy-xp-eFC"/>
                            <constraint firstAttribute="trailing" secondItem="sgJ-iY-nKg" secondAttribute="trailing" id="uTG-el-qes"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="NjG-i1-kFX"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="baseline_home_black_18dp" id="8HV-LS-nvW"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="DistLabel" destination="ajw-hF-Yaf" id="6hX-Ov-HRN"/>
                        <outlet property="FloorLabel" destination="zlA-Z4-6Ek" id="1Yf-Br-Rt6"/>
                        <outlet property="PedLabel" destination="ulR-9C-QSH" id="M89-jO-5Xi"/>
                        <outlet property="goalCount" destination="gQc-Dq-xRp" id="QvI-gp-gg3"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Fw-cM-cpF" customClass="BarChartView" customModule="Charts">
                                <rect key="frame" x="33" y="200" width="348" height="593"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Report of the last 7 days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hec-tQ-ZCp">
                                <rect key="frame" x="103" y="153" width="208" height="23"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FitSpaceLogo" translatesAutoresizingMaskIntoConstraints="NO" id="UjV-T8-SLC">
...
                            <constraint firstItem="8Fw-cM-cpF" firstAttribute="top" secondItem="Hec-tQ-ZCp" secondAttribute="bottom" constant="24" id="goO-Z5-2hC"/>
                            <constraint firstItem="UjV-T8-SLC" firstAttribute="centerX" secondItem="7sO-Y0-Vfx" secondAttribute="centerX" id="pvn-iM-jRH"/>
                            <constraint firstItem="UjV-T8-SLC" firstAttribute="top" secondItem="IHn-2u-yMx" secondAttribute="top" constant="4" id="qjY-8u-fBx"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="IHn-2u-yMx"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Report" image="baseline_bar_chart_black_18dp" id="MLl-C9-lV2"/>
                    <connections>
                        <outlet property="chartView" destination="8Fw-cM-cpF" id="oa6-9f-o2y"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BD4-bK-2Sx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
